--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node_modules\\.bin\\nodemon app.js"
   },
   "type": "module",
   "author": "cairbin",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
   }
 }
